--- a/data/ui/languages.ui
+++ b/data/ui/languages.ui
@@ -5,15 +5,20 @@ SPDX-FileCopyrightText: 2021-23 Hugo Olabera <hugolabe@gmail.com>
 SPDX-License-Identifier: GPL-3.0-or-later
 -->
 
+<!-- Window for select user languages -->
 <interface>
   <template class="LanguagesWindow" parent="AdwWindow">
     <property name="title" translatable="yes">Pick your Languages</property>
     <property name="default-height">560</property>
     <property name="default-width">420</property>
     <property name="modal">true</property>
+
+    <!-- Window content -->
     <property name="content">
       <object class="GtkBox">
         <property name="orientation">vertical</property>
+
+        <!-- Header -->
         <child>
           <object class="GtkHeaderBar">
             <style>
@@ -21,6 +26,8 @@ SPDX-License-Identifier: GPL-3.0-or-later
             </style>
           </object>
         </child>
+
+        <!-- Content box -->
         <child>
           <object class="GtkBox">
             <property name="orientation">vertical</property>
@@ -28,44 +35,61 @@ SPDX-License-Identifier: GPL-3.0-or-later
             <property name="margin-end">12</property>
             <property name="margin-bottom">12</property>
             <property name="spacing">12</property>
+
+            <!-- Filter entry -->
             <child>
               <object class="GtkSearchEntry" id="languages_entry">
                 <property name="placeholder_text" translatable="yes">Filter languages</property>
               </object>
             </child>
+
+            <!-- Languages scroller -->
             <child>
               <object class="GtkScrolledWindow">
                 <property name="vexpand">true</property>
                 <property name="has-frame">true</property>
                 <child>
                   <object class="GtkViewport">
+
+                    <!-- Languages list -->
                     <child>
                       <object class="GtkListBox" id="languages_list">
                       </object>
                     </child>
+
                   </object>
                 </child>
               </object>
             </child>
+
+            <!-- Buttons box -->
             <child>
               <object class="GtkBox">
                 <property name="spacing">12</property>
                 <property name="homogeneous">true</property>
+
+                <!-- Select all languages button -->
                 <child>
                   <object class="GtkButton" id="select_all_button">
                     <property name="label" translatable="yes">Select All</property>
                   </object>
                 </child>
+
+                <!-- Select none languages button -->
                 <child>
                   <object class="GtkButton" id="select_none_button">
                     <property name="label" translatable="yes">Select None</property>
                   </object>
                 </child>
+
               </object>
             </child>
+
           </object>
         </child>
+
       </object>
     </property>
+
   </template>
 </interface>
