--- a/data/ui/about.ui
+++ b/data/ui/about.ui
@@ -5,6 +5,7 @@ SPDX-FileCopyrightText: 2021-23 Hugo Olabera <hugolabe@gmail.com>
 SPDX-License-Identifier: GPL-3.0-or-later
 -->
 
+<!-- About Wike window -->
 <interface>
   <object class="AdwAboutWindow" id="about_window">
     <property name="application-icon">com.github.hugolabe.Wike</property>
