--- a/data/ui/bookmarks-row.ui
+++ b/data/ui/bookmarks-row.ui
@@ -5,26 +5,35 @@ SPDX-FileCopyrightText: 2021-23 Hugo Olabera <hugolabe@gmail.com>
 SPDX-License-Identifier: GPL-3.0-or-later
 -->
 
+<!-- Row for bookmarks list -->
 <interface>
   <template class="BookmarksRow" parent="GtkListBoxRow">
+
+    <!-- Bookmark row box -->
     <child>
       <object class="GtkBox">
         <property name="margin-top">6</property>
         <property name="margin-bottom">6</property>
         <property name="margin-start">3</property>
         <property name="spacing">12</property>
+
+        <!-- Labels box -->
         <child>
           <object class="GtkBox">
             <property name="orientation">vertical</property>
             <property name="hexpand">true</property>
             <property name="valign">center</property>
             <property name="spacing">3</property>
+
+            <!-- Title label -->
             <child>
               <object class="GtkLabel" id="title_label">
                 <property name="halign">start</property>
                 <property name="ellipsize">end</property>
               </object>
             </child>
+
+            <!-- Language label -->
             <child>
               <object class="GtkLabel" id="lang_label">
                 <property name="halign">start</property>
@@ -32,8 +41,11 @@ SPDX-License-Identifier: GPL-3.0-or-later
                 <property name="ellipsize">end</property>
               </object>
             </child>
+
           </object>
         </child>
+
+        <!-- Bookmark remove button -->
         <child>
           <object class="GtkButton" id="remove_button">
             <property name="icon-name">window-close-symbolic</property>
@@ -45,7 +57,9 @@ SPDX-License-Identifier: GPL-3.0-or-later
             </style>
           </object>
         </child>
+
       </object>
     </child>
+
   </template>
 </interface>
