--- a/data/ui/langlinks-row.ui
+++ b/data/ui/langlinks-row.ui
@@ -5,8 +5,11 @@ SPDX-FileCopyrightText: 2021-23 Hugo Olabera <hugolabe@gmail.com>
 SPDX-License-Identifier: GPL-3.0-or-later
 -->
 
+<!-- Row for language links list -->
 <interface>
   <template class="LanglinksRow" parent="GtkListBoxRow">
+
+    <!-- Language link row box -->
     <child>
       <object class="GtkBox">
         <property name="orientation">horizontal</property>
@@ -15,6 +18,8 @@ SPDX-License-Identifier: GPL-3.0-or-later
         <property name="margin-start">3</property>
         <property name="margin-end">3</property>
         <property name="spacing">12</property>
+
+        <!-- Flag icon -->
         <child>
           <object class="GtkImage" id="flag_image">
             <property name="icon-name">noflag</property>
@@ -22,16 +27,22 @@ SPDX-License-Identifier: GPL-3.0-or-later
             <property name="valign">center</property>
           </object>
         </child>
+
+        <!-- Labels box -->
         <child>
           <object class="GtkBox">
             <property name="orientation">vertical</property>
             <property name="spacing">3</property>
+
+            <!-- Language label -->
             <child>
               <object class="GtkLabel" id="lang_label">
                 <property name="halign">start</property>
                 <property name="ellipsize">end</property>
               </object>
             </child>
+
+            <!-- Title label -->
             <child>
               <object class="GtkLabel" id="title_label">
                 <property name="halign">start</property>
@@ -39,9 +50,12 @@ SPDX-License-Identifier: GPL-3.0-or-later
                 <property name="ellipsize">end</property>
               </object>
             </child>
+
           </object>
         </child>
+
       </object>
     </child>
+
   </template>
 </interface>
