--- a/data/ui/prefs.ui
+++ b/data/ui/prefs.ui
@@ -5,17 +5,24 @@ SPDX-FileCopyrightText: 2021-23 Hugo Olabera <hugolabe@gmail.com>
 SPDX-License-Identifier: GPL-3.0-or-later
 -->
 
+<!-- Preferences window -->
 <interface>
   <template class="PrefsWindow" parent="AdwPreferencesWindow">
     <property name="modal">true</property>
     <property name="default-height">460</property>
     <property name="default-width">580</property>
     <property name="search-enabled">false</property>
+
+    <!-- Preferences page -->
     <child>
       <object class="AdwPreferencesPage">
+
+        <!-- Group behavior -->
         <child>
           <object class="AdwPreferencesGroup">
             <property name="title" translatable="yes">Behavior</property>
+
+            <!-- Home page selector -->
             <child>
               <object class="AdwComboRow" id="start_combo">
                 <property name="title" translatable="yes">Home Page</property>
@@ -32,67 +39,88 @@ SPDX-License-Identifier: GPL-3.0-or-later
                 </property>
               </object>
             </child>
+
           </object>
         </child>
+
+        <!-- Group privacy -->
         <child>
           <object class="AdwPreferencesGroup">
             <property name="title" translatable="yes">Privacy</property>
+
+            <!-- Live search -->
             <child>
               <object class="AdwExpanderRow">
                 <property name="title" translatable="yes">Allow Live Search on Desktop</property>
                 <property name="subtitle" translatable="yes">Warning: all desktop searches will be sent to Wikipedia</property>
+
                 <child type="prefix">
                   <object class="GtkSwitch" id="desktop_switch">
                     <property name="valign">center</property>
                   </object>
                 </child>
+
                 <child>
                   <object class="AdwActionRow">
                     <property name="title" translatable="yes">Desktop searches are performed in the default language</property>
                     <property name="subtitle" translatable="yes">You can search in other languages ​​using a prefix. Eg. -es to search in Spanish</property>
                   </object>
                 </child>
+
               </object>
             </child>
+
+            <!-- Recent articles -->
             <child>
               <object class="AdwActionRow">
                 <property name="title" translatable="yes">Keep a List of Recent Articles</property>
                 <property name="subtitle" translatable="yes">Wike will remember the history of visited articles</property>
                 <property name="activatable-widget">history_switch</property>
+
                 <child type="prefix">
                   <object class="GtkSwitch" id="history_switch">
                     <property name="valign">center</property>
                   </object>
                 </child>
+
                 <child>
                   <object class="GtkButton" id="clear_history_button">
                     <property name="label" translatable="yes">Clear</property>
                     <property name="valign">center</property>
                   </object>
                 </child>
+
               </object>
             </child>
+
+            <!-- Clear personal data -->
             <child>
               <object class="AdwActionRow">
                 <property name="title" translatable="yes">Clear Personal Data on Close</property>
                 <property name="subtitle" translatable="yes">Cookies and cache data will be deleted</property>
                 <property name="activatable-widget">data_switch</property>
+
                 <child type="prefix">
                   <object class="GtkSwitch" id="data_switch">
                     <property name="valign">center</property>
                   </object>
                 </child>
+
                 <child>
                   <object class="GtkButton" id="clear_data_button">
                     <property name="label" translatable="yes">Clear</property>
                     <property name="valign">center</property>
                   </object>
                 </child>
+
               </object>
             </child>
+
           </object>
         </child>
+
       </object>
     </child>
+
   </template>
 </interface>
