--- a/data/ui/search-settings-row.ui
+++ b/data/ui/search-settings-row.ui
@@ -5,8 +5,11 @@ SPDX-FileCopyrightText: 2021-23 Hugo Olabera <hugolabe@gmail.com>
 SPDX-License-Identifier: GPL-3.0-or-later
 -->
 
+<!-- Language row for search settings -->
 <interface>
   <template class="SettingsLangsRow" parent="GtkListBoxRow">
+
+    <!-- Language row box -->
     <child>
       <object class="GtkBox">
         <property name="margin-top">6</property>
@@ -14,6 +17,8 @@ SPDX-License-Identifier: GPL-3.0-or-later
         <property name="margin-start">12</property>
         <property name="margin-end">18</property>
         <property name="spacing">9</property>
+
+        <!-- Flag icon -->
         <child>
           <object class="GtkImage" id="flag_image">
             <property name="icon-name">noflag</property>
@@ -21,17 +26,23 @@ SPDX-License-Identifier: GPL-3.0-or-later
             <property name="valign">center</property>
           </object>
         </child>
+
+        <!-- Language label -->
         <child>
           <object class="GtkLabel" id="name_label">
             <property name="halign">start</property>
           </object>
         </child>
+
+        <!-- Checkmark image for selected language -->
         <child>
           <object class="GtkImage" id="check_image">
             <property name="hexpand">true</property>
             <property name="halign">start</property>
           </object>
         </child>
+
+        <!-- Language id label -->
         <child>
           <object class="GtkLabel" id="id_label">
             <property name="halign">end</property>
@@ -40,7 +51,9 @@ SPDX-License-Identifier: GPL-3.0-or-later
             </style>
           </object>
         </child>
+
       </object>
     </child>
+
   </template>
 </interface>
