--- a/data/ui/search-settings.ui
+++ b/data/ui/search-settings.ui
@@ -5,12 +5,17 @@ SPDX-FileCopyrightText: 2021-23 Hugo Olabera <hugolabe@gmail.com>
 SPDX-License-Identifier: GPL-3.0-or-later
 -->
 
+<!-- Search settings menu -->
 <interface>
   <template class="SettingsPopover" parent="GtkPopover">
     <property name="width-request">240</property>
+
+    <!-- Content box -->
     <child>
       <object class="GtkBox">
         <property name="orientation">vertical</property>
+
+        <!-- Pick languages button -->
         <child>
           <object class="GtkButton" id="languages_button">
             <property name="label" translatable="yes">Pick your Languages</property>
@@ -18,11 +23,15 @@ SPDX-License-Identifier: GPL-3.0-or-later
             <property name="margin-bottom">6</property>
           </object>
         </child>
+
+        <!-- Separator -->
         <child>
           <object class="GtkSeparator" id="languages_separator">
             <property name="visible">false</property>
           </object>
         </child>
+
+        <!-- Languages scroller -->
         <child>
           <object class="GtkScrolledWindow" id="languages_scroller">
             <property name="max-content-height">320</property>
@@ -30,6 +39,8 @@ SPDX-License-Identifier: GPL-3.0-or-later
             <property name="propagate-natural-width">True</property>
             <child>
               <object class="GtkViewport">
+
+                <!-- Languages list -->
                 <child>
                   <object class="GtkListBox" id="languages_list">
                     <property name="margin-bottom">6</property>
@@ -38,14 +49,19 @@ SPDX-License-Identifier: GPL-3.0-or-later
                     </style>
                   </object>
                 </child>
+
               </object>
             </child>
           </object>
         </child>
+
+        <!-- Separator -->
         <child>
           <object class="GtkSeparator">
           </object>
         </child>
+
+        <!-- Search suggestions box -->
         <child>
           <object class="GtkBox">
             <property name="margin-top">12</property>
@@ -53,6 +69,8 @@ SPDX-License-Identifier: GPL-3.0-or-later
             <property name="margin-start">6</property>
             <property name="margin-end">6</property>
             <property name="spacing">12</property>
+
+            <!-- Search suggestions label -->
             <child>
               <object class="GtkLabel">
                 <property name="label" translatable="yes">Search Suggestions</property>
@@ -60,13 +78,18 @@ SPDX-License-Identifier: GPL-3.0-or-later
                 <property name="halign">start</property>
               </object>
             </child>
+
+            <!-- Search suggestions switch -->
             <child>
               <object class="GtkSwitch" id="suggestions_switch">
               </object>
             </child>
+
           </object>
         </child>
+
       </object>
     </child>
+
   </template>
 </interface>
