--- a/data/ui/suggestions.ui
+++ b/data/ui/suggestions.ui
@@ -5,6 +5,7 @@ SPDX-FileCopyrightText: 2021-23 Hugo Olabera <hugolabe@gmail.com>
 SPDX-License-Identifier: GPL-3.0-or-later
 -->
 
+<!-- Search suggestions popover -->
 <interface>
   <template class="SuggestionsPopover" parent="GtkPopoverMenu">
     <property name="width-request">340</property>
